hphp/test/slow/parser/php-reserved-name-int-1.php.expectf
Fatal error: Cannot use 'Int' as class name as it is reserved in %s/hphp/test/slow/parser/php-reserved-name-int-1.php on line 6